{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 84,
  "lineage": "5624c1ad-abb8-d976-4bdc-f8000890addd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0212d06caa05c8471",
            "association_id": "eipassoc-044002ff4e648e305",
            "domain": "vpc",
            "id": "eipalloc-0212d06caa05c8471",
            "instance": "i-074b83a4e940c37e1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01ffb6e2a0abcda80",
            "private_dns": "ip-10-4-0-137.ec2.internal",
            "private_ip": "10.4.0.137",
            "public_dns": "ec2-52-200-121-103.compute-1.amazonaws.com",
            "public_ip": "52.200.121.103",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.public",
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip_for_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e008bdcbcf0d3eec",
            "association_id": "eipassoc-095c6c993d6798ff0",
            "domain": "vpc",
            "id": "eipalloc-0e008bdcbcf0d3eec",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01d26ed23a6407f79",
            "private_dns": "ip-10-4-0-52.ec2.internal",
            "private_ip": "10.4.0.52",
            "public_dns": "ec2-44-208-182-216.compute-1.amazonaws.com",
            "public_ip": "44.208.182.216",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "is-jiechen-eip-01"
            },
            "tags_all": {
              "Name": "is-jiechen-eip-01"
            },
            "timeouts": {
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:951198113286:instance/i-037a47a9b0fd5d2a9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-interview-iam-node",
            "id": "i-037a47a9b0fd5d2a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "is-chenjie",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00565771253d093b2",
            "private_dns": "ip-10-4-1-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.1.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09d1916a340577902",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5a48019ef55666b",
            "tags": {
              "Name": "is-jiechen-ec2-pvt-02"
            },
            "tags_all": {
              "Name": "is-jiechen-ec2-pvt-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023b8f76732949447"
            ]
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.private",
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06640050dc3f556bb",
            "arn": "arn:aws:ec2:us-east-1:951198113286:instance/i-074b83a4e940c37e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-interview-iam-node",
            "id": "i-074b83a4e940c37e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "is-chenjie",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01ffb6e2a0abcda80",
            "private_dns": "ip-10-4-0-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.4.0.137",
            "public_ip": "52.200.121.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07846a2817c0b5b3c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01103e35ccdcf2d41",
            "tags": {
              "Name": "is-jiechen-ec2-pub-02"
            },
            "tags_all": {
              "Name": "is-jiechen-ec2-pub-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e84444a03a2bd0d9"
            ]
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951198113286:internet-gateway/igw-09db7c00c6d444547",
            "id": "igw-09db7c00c6d444547",
            "owner_id": "951198113286",
            "tags": {
              "Name": "is-jiechen-igw-01"
            },
            "tags_all": {
              "Name": "is-jiechen-igw-01"
            },
            "vpc_id": "vpc-0fdb8f3a6c4669814"
          },
          "dependencies": [
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e008bdcbcf0d3eec",
            "connectivity_type": "public",
            "id": "nat-0735e0f6b45002e82",
            "network_interface_id": "eni-01d26ed23a6407f79",
            "private_ip": "10.4.0.52",
            "public_ip": "44.208.182.216",
            "subnet_id": "subnet-01103e35ccdcf2d41",
            "tags": {
              "Name": "is-jiechen-nat-02"
            },
            "tags_all": {
              "Name": "is-jiechen-nat-02"
            }
          },
          "dependencies": [
            "aws_eip.public_ip_for_nat",
            "aws_internet_gateway.public",
            "aws_subnet.public",
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951198113286:route-table/rtb-0f734461763263253",
            "id": "rtb-0f734461763263253",
            "owner_id": "951198113286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0735e0f6b45002e82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "is-jiechen-rt-pvt-02"
            },
            "tags_all": {
              "Name": "is-jiechen-rt-pvt-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb8f3a6c4669814"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.public_ip_for_nat",
            "aws_internet_gateway.public",
            "aws_nat_gateway.public",
            "aws_subnet.public",
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951198113286:route-table/rtb-064d3e2e35a9db014",
            "id": "rtb-064d3e2e35a9db014",
            "owner_id": "951198113286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09db7c00c6d444547",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "is-jiechen-rt-pub-02"
            },
            "tags_all": {
              "Name": "is-jiechen-rt-pub-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb8f3a6c4669814"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09120c7121918524e",
            "route_table_id": "rtb-0f734461763263253",
            "subnet_id": "subnet-0d5a48019ef55666b"
          },
          "dependencies": [
            "aws_eip.public_ip_for_nat",
            "aws_internet_gateway.public",
            "aws_nat_gateway.public",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cfa22762009ad5f",
            "route_table_id": "rtb-064d3e2e35a9db014",
            "subnet_id": "subnet-01103e35ccdcf2d41"
          },
          "dependencies": [
            "aws_internet_gateway.public",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951198113286:security-group/sg-023b8f76732949447",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023b8f76732949447",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.4.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221025065432956200000001",
            "name_prefix": "terraform-",
            "owner_id": "951198113286",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "is-jiechen-sg-pub-02"
            },
            "tags_all": {
              "Name": "is-jiechen-sg-pub-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb8f3a6c4669814"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951198113286:security-group/sg-0e84444a03a2bd0d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e84444a03a2bd0d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221025065643572100000001",
            "name_prefix": "terraform-",
            "owner_id": "951198113286",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "is-jiechen-sg-pub-02"
            },
            "tags_all": {
              "Name": "is-jiechen-sg-pub-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdb8f3a6c4669814"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951198113286:subnet/subnet-0d5a48019ef55666b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5a48019ef55666b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951198113286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "is-jiechen-sn-pvt-02"
            },
            "tags_all": {
              "Name": "is-jiechen-sn-pvt-02"
            },
            "vpc_id": "vpc-0fdb8f3a6c4669814"
          },
          "dependencies": [
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951198113286:subnet/subnet-01103e35ccdcf2d41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.4.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01103e35ccdcf2d41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951198113286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "is-jiechen-sn-pub-02"
            },
            "tags_all": {
              "Name": "is-jiechen-sn-pub-02"
            },
            "vpc_id": "vpc-0fdb8f3a6c4669814"
          },
          "dependencies": [
            "aws_vpc.chenjie"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chenjie",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951198113286:vpc/vpc-0fdb8f3a6c4669814",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-011ed197461cbd4eb",
            "default_route_table_id": "rtb-0a97df94185ff1842",
            "default_security_group_id": "sg-01be9d28e772df917",
            "dhcp_options_id": "dopt-096c1dd7e1ab46f5c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fdb8f3a6c4669814",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a97df94185ff1842",
            "owner_id": "951198113286",
            "tags": {
              "Name": "is-jiechen-VPC-02"
            },
            "tags_all": {
              "Name": "is-jiechen-VPC-02"
            }
          }
        }
      ]
    }
  ]
}